[metadata]
name = pysakuraio
version = 0.1
url = https://github.com/key/pysakuraio
author = Mitsukuni Sato
author_email = mitsukuni.sato@gmail.com
license = file: LICENSE
description = pysakuraio: sakura.io dataset parser in python
long_description = file: README.md

[options]
zip_safe = False
packages = find:
